// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Transitionable> -> delay: 3000 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "4y3w39",
      "next": undefined,
      "styles": "
        transition-duration: 320ms;
      ",
    },
    Object {
      "map": undefined,
      "name": "18ctvvw",
      "next": undefined,
      "styles": "
      transition-timing-function: linear;
    ",
    },
    Object {
      "map": undefined,
      "name": "1jzh3yq",
      "next": undefined,
      "styles": "
        transition-delay: 3000ms;
      ",
    },
  ],
}
`;

exports[`<Transitionable> -> duration: fast 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "aq9a5g",
      "next": undefined,
      "styles": "
        transition-duration: 160ms;
      ",
    },
    Object {
      "map": undefined,
      "name": "18ctvvw",
      "next": undefined,
      "styles": "
      transition-timing-function: linear;
    ",
    },
  ],
}
`;

exports[`<Transitionable> -> duration: themed 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "18ywuy9",
      "next": undefined,
      "styles": "
        transition-duration: 3000ms;
      ",
    },
    Object {
      "map": undefined,
      "name": "18ctvvw",
      "next": undefined,
      "styles": "
      transition-timing-function: linear;
    ",
    },
  ],
}
`;

exports[`<Transitionable> -> easing: swiftMove 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "4y3w39",
      "next": undefined,
      "styles": "
        transition-duration: 320ms;
      ",
    },
    Object {
      "map": undefined,
      "name": "1x1hcl8",
      "next": undefined,
      "styles": "
      transition-timing-function: cubic-bezier(0.4,0,0.2,1);
    ",
    },
  ],
}
`;

exports[`<Transitionable> -> easing: themed 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "4y3w39",
      "next": undefined,
      "styles": "
        transition-duration: 320ms;
      ",
    },
    Object {
      "map": undefined,
      "name": "1ifsr4s",
      "next": undefined,
      "styles": "
      transition-timing-function: cubic-bezier(0.4,0,1,1);
    ",
    },
  ],
}
`;

exports[`<Transitionable> -> property: array property 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "4y3w39",
      "next": undefined,
      "styles": "
        transition-duration: 320ms;
      ",
    },
    Object {
      "map": undefined,
      "name": "18ctvvw",
      "next": undefined,
      "styles": "
      transition-timing-function: linear;
    ",
    },
    Object {
      "map": undefined,
      "name": "c5iz2f",
      "next": undefined,
      "styles": "
        transition-property: transform,width;
      ",
    },
  ],
}
`;

exports[`<Transitionable> -> property: string property 1`] = `
Object {
  "css": Array [
    Object {
      "map": undefined,
      "name": "4y3w39",
      "next": undefined,
      "styles": "
        transition-duration: 320ms;
      ",
    },
    Object {
      "map": undefined,
      "name": "18ctvvw",
      "next": undefined,
      "styles": "
      transition-timing-function: linear;
    ",
    },
    Object {
      "map": undefined,
      "name": "1kqvi55",
      "next": undefined,
      "styles": "
        transition-property: transform;
      ",
    },
  ],
}
`;
